bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: assignment2
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: assignment2
                com.docker.compose.service: frontend
                com.docker.compose.network.mlops-network: "true"
        spec:
            containers:
                - name: frontend
                  image: assignment2-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
                    - name: frontend-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: app-src
                      mountPath: /app/src
            volumes:
                - name: app-src
                  hostPath:
                    path: D:\SP JAIN ASSIGNMENTS\SDMA\Assignment 2\frontend\src
