bridge/base/grafana-deployment.yaml
#! grafana-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: grafana
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: grafana
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: assignment2
            com.docker.compose.service: grafana
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: assignment2
                com.docker.compose.service: grafana
                com.docker.compose.network.mlops-network: "true"
        spec:
            containers:
                - name: grafana
                  image: grafana/grafana:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: grafana-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: var-lib-grafana
                      mountPath: /var/lib/grafana
                    - name: etc-grafana-provisioning-dashboards
                      mountPath: /etc/grafana/provisioning/dashboards
                    - name: etc-grafana-provisioning-datasources
                      mountPath: /etc/grafana/provisioning/datasources
            volumes:
                - name: var-lib-grafana
                  persistentVolumeClaim:
                    claimName: grafana-grafana-data
                - name: etc-grafana-provisioning-dashboards
                  hostPath:
                    path: D:\SP JAIN ASSIGNMENTS\SDMA\Assignment 2\grafana\dashboards
                - name: etc-grafana-provisioning-datasources
                  hostPath:
                    path: D:\SP JAIN ASSIGNMENTS\SDMA\Assignment 2\grafana\datasources
