bridge/base/mlflow-deployment.yaml
#! mlflow-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mlflow
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: mlflow
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: assignment2
            com.docker.compose.service: mlflow
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: assignment2
                com.docker.compose.service: mlflow
                com.docker.compose.network.mlops-network: "true"
        spec:
            containers:
                - name: mlflow
                  image: python:3.9-slim
                  imagePullPolicy: IfNotPresent
                  command: ['bash -c pip install mlflow && mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri sqlite:///mlruns.db']
                  workingDir: /mlruns
                  ports:
                    - name: mlflow-5000
                      containerPort: 5000
                  volumeMounts:
                    - name: mlruns
                      mountPath: /mlruns
            volumes:
                - name: mlruns
                  hostPath:
                    path: D:\SP JAIN ASSIGNMENTS\SDMA\Assignment 2\mlruns
