bridge/base/prometheus-deployment.yaml
#! prometheus-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prometheus
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: prometheus
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: assignment2
            com.docker.compose.service: prometheus
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: assignment2
                com.docker.compose.service: prometheus
                com.docker.compose.network.mlops-network: "true"
        spec:
            containers:
                - name: prometheus
                  image: prom/prometheus:latest
                  imagePullPolicy: IfNotPresent
                  command: [--config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus --web.console.libraries=/etc/prometheus/console_libraries --web.console.templates=/etc/prometheus/consoles --storage.tsdb.retention.time=200h --web.enable-lifecycle]
                  ports:
                    - name: prometheus-9090
                      containerPort: 9090
                  volumeMounts:
                    - name: etc-prometheus-prometheus-yml
                      mountPath: /etc/prometheus/prometheus.yml
                    - name: prometheus
                      mountPath: /prometheus
            volumes:
                - name: etc-prometheus-prometheus-yml
                  hostPath:
                    path: D:\SP JAIN ASSIGNMENTS\SDMA\Assignment 2\prometheus.yml
                - name: prometheus
                  persistentVolumeClaim:
                    claimName: prometheus-prometheus-data
