bridge/base/grafana-expose.yaml
#! grafana-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: grafana
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: grafana
spec:
    selector:
        com.docker.compose.project: assignment2
        com.docker.compose.service: grafana
    ports:
        - name: grafana-3000
          port: 3000
          targetPort: grafana-3000
