bridge/base/grafana-service.yaml
#! grafana-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: grafana-published
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: grafana
spec:
    selector:
        com.docker.compose.project: assignment2
        com.docker.compose.service: grafana
    ports:
        - name: grafana-3001
          port: 3001
          protocol: TCP
          targetPort: grafana-3000

# check if there is at least one published port
