bridge/base/mlflow-expose.yaml
#! mlflow-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mlflow
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: mlflow
spec:
    selector:
        com.docker.compose.project: assignment2
        com.docker.compose.service: mlflow
    ports:
        - name: mlflow-5000
          port: 5000
          targetPort: mlflow-5000
