bridge/base/mlflow-service.yaml
#! mlflow-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mlflow-published
    namespace: assignment2
    labels:
        com.docker.compose.project: assignment2
        com.docker.compose.service: mlflow
spec:
    selector:
        com.docker.compose.project: assignment2
        com.docker.compose.service: mlflow
    ports:
        - name: mlflow-5000
          port: 5000
          protocol: TCP
          targetPort: mlflow-5000

# check if there is at least one published port
