bridge/base/mlops-network-network-policy.yaml
#! mlops-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: mlops-network-network-policy
    namespace: assignment2
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.mlops-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.mlops-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.mlops-network: "true"
